; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns/extr_hns_dsaf_rcb.c_hns_rcb_get_tx_coalesced_frames.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns/extr_hns_dsaf_rcb.c_hns_rcb_get_tx_coalesced_frames.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rcb_common_cb = type { i32 }

@RCB_CFG_PKTLINE_REG = common dso_local global i64 0, align 8
@HNS_RCB_TX_PKTLINE_OFFSET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hns_rcb_get_tx_coalesced_frames(%struct.rcb_common_cb* %0, i32 %1) #0 {
  %3 = alloca %struct.rcb_common_cb*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.rcb_common_cb* %0, %struct.rcb_common_cb** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i64, i64* @RCB_CFG_PKTLINE_REG, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @HNS_RCB_TX_PKTLINE_OFFSET, align 4
  %9 = add nsw i32 %7, %8
  %10 = mul nsw i32 %9, 4
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %6, %11
  store i64 %12, i64* %5, align 8
  %13 = load %struct.rcb_common_cb*, %struct.rcb_common_cb** %3, align 8
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @dsaf_read_dev(%struct.rcb_common_cb* %13, i64 %14)
  ret i32 %15
}

declare dso_local i32 @dsaf_read_dev(%struct.rcb_common_cb*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
